Ostylowanie movieBox w grid - działa (z drobnymi problemami przy wąskiej kolumnie) od 550px

--- a/*struktura.html
+++ b/*struktura.html
@@ -34,8 +34,8 @@
 		<section class="movieBox group">
 			<!-- Box dla filmu na konkretny dzień -->
 				<header class="movieBox__header">
-					<span class="movieBox__label label label--movie"></span> <!-- etykieta filmu (jeśli jest) - może ich być maksymalnie jedna -->
-					<h2 class="movieBox__title">Tytuł filmu</h2>
+					<span class="movieBox__label label label--movie centerContent"><span>Etykieta</span></span> <!-- etykieta filmu (jeśli jest) - może ich być maksymalnie jedna -->
+					<h2 class="movieBox__title centerContent"><span>Tytuł filmu</span></h2>
 				</header>
 				<button class="movieBox__aboutBtn btn btn--dark btn--hovColor btn--rounded btn--aboutMovie">O filmie</button> <!-- na razie ukryte stylami -->
 				<img class="movieBox__poster" src=sciezka_do_plakatu alt="Plakat filmu - %%tytul%%">
