Dodane testowe ramki z komunikatami o braku CSS Grid i rozdzielczości mniejszej niż 769px

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,18 @@
 </head>
 <body>
 
+<!-- TYMCZASOWE DO WERSJI SHOW -->
+<div class="warning warning--noGrid">
+  <h1>Przeglądarka nie obsługuje CSS Grid</h1>
+  <p>Używana przeglądarka nie obsługuje funkcji CSS Grid, która jest niezbędna do prawidłowego wyświetlania niektórych części strony.</p>
+</div>
+
+<div class="warning warning--tooSmall">
+  <h1>Zbyt niska rozdzielczość</h1>
+  <p>Rozdzielczość okna przeglądarki jest mniejsza niż 769px - niektóre części strony mogą pozycjonować się niewłaściwie</p>
+</div>
+<!-- koniec -->
+
 <div class="pageContainer">
 
 <header class="site-header wrapper">
