--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <!-- TYMCZASOWE DO WERSJI SHOW -->
-<div class="warning warning--noGrid">
+<!-- <div class="warning warning--noGrid">
   <h1>Przeglądarka nie obsługuje CSS Grid</h1>
   <p>Używana przeglądarka nie obsługuje funkcji CSS Grid, która jest niezbędna do prawidłowego wyświetlania niektórych części strony.</p>
 </div>
@@ -38,7 +38,7 @@
 <div class="warning warning--tooSmall">
   <h1>Zbyt niska rozdzielczość</h1>
   <p>Rozdzielczość okna przeglądarki jest mniejsza niż 769px - niektóre części strony mogą pozycjonować się niewłaściwie</p>
-</div>
+</div> -->
 <!-- koniec -->
 
 <div class="pageContainer">
